@startuml

title __DB's Class Diagram__\n

  namespace  {
    namespace ndi.augusttheodor.aurora {
      namespace db {
        class indi.augusttheodor.aurora.db.DbChatHeader {
            + author_id : String
            + author_name : String
            + author_nick : String
            + bank_id : String
            + last_message : String
            + last_time : String
            + timestamp : long
            + unread : int
            + DbChatHeader()
        }
      }
    }
  }
  

  namespace  {
    namespace ndi.augusttheodor.aurora {
      namespace db {
        class indi.augusttheodor.aurora.db.DbChatMessage {
            + author_id : String
            + bank_id : String
            + chat_id : String
            + content : String
            + img : String
            + time : String
            + timestamp : String
            + DbChatMessage()
        }
      }
    }
  }
  

  indi.augusttheodor.aurora.db.DbChatHeader -up-|> com.orm.SugarRecord
  indi.augusttheodor.aurora.db.DbChatMessage -up-|> com.orm.SugarRecord


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
